Test Cases/V2/Test Case/Tests/TT-238 - VTO/Test Cases/Negative/TT_238_3_AddCoreValues.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>TT_238_3_AddCoreValues</name>
   <tag></tag>
   <comment></comment>
   <testCaseGuid>f5183261-8db7-477b-9813-2ad9bd11d8ec</testCaseGuid>
</TestCaseEntity>
